# CodeEval-Pro

./: README.md  pyproject.toml
dataset/: humaneval_pro.json
eval/: harness.py  inference.py  run_api.py  utils.py
